k8s/kong-config/kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signin
  namespace: production
  annotations:
    konghq.com/plugins: app-jwt
    konghq.com/strip-path: "false"

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /authent
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: production
  annotations:
    konghq.com/strip-path: "false"

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 4000
